Tue Apr  1 17:02:37 2003  Steve Huston  <shuston@riverace.com>

	* tests/Process_Strategy_Test.cpp: Nul-terminate received command
	  string to ACE_TEXT_CHAR_TO_TCHAR can deal with it; this is needed
	  to properly log the string in wide-char builds.

Tue Apr  1 15:52:41 2003  Steve Huston  <shuston@riverace.com>

	* tests/Multicast_Test.cpp: If the platform doesn't support IP
	  multicast, log an info message, not an error.

Tue Apr  1 10:06:57 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Driver.pm:

          Fixed a bug with multiple types and an mpc file specified with
          a directory.  The original file name was not being preserved.

Tue Apr  1 16:02:30 CEST 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>

        * ace/Makefile.{am,bor}: Added Unbounded_Set_Ex.

Tue Apr  1 13:42:37 CEST 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>

        * tests/Unbounded_Set_Test_Ex.cpp: New.

          This is a replica of Unbounded_Set_Test.cpp but uses the new
          ACE_Unbounded_Set_Ex class instead of ACE_Unbounded_Set.
          This is for side-by-side comparisons between the two tests.

        * tests/Makefile: Added Unbounded_Set_Test_Ex, updated dependencies.

        * tests/Makefile.{am,bor}: Added Unbounded_Set_Test_Ex.

Tue Apr  1 12:48:33 CEST 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>

        * ace/Node.{h,cpp}:

          Added back the deleted_ member.
          This sets the stage for the new Ace_Unbounded_Set_Ex class.

        * ace/Unbounded_Set_Ex.{h,inl,cpp}: New.

          This class is a variation on ACE_Unbounded_Set that fixes
          Bugzilla bug 1460.

        * ace/Makefile.ace: Add Unbounded_Set_Ex.

Mon Mar 31 14:04:22 2003  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/CDR_Stream.cpp:
        * ace/CDR_Stream.h (ACE_OutputCDR): Provide an accessor method,
          ACE_OutputCDR::wchar_maxbytes() for getting the stream size for