@@ -21,6 +21,8 @@
 
 #include "test_config.h"
 #include <ace/Unbounded_Set.h>
+#include <ace/Auto_Ptr.h>
+#include <ace/SString.h>
 
 ACE_RCSID(tests, Unbounded_Set_Test, "$Id$")
 
@@ -144,4 +146,24 @@ ACE_TMAIN (int, ACE_TCHAR *[])
   ACE_END_TEST;
   return 0;
 }
+
+#if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
+
+template class ACE_Node<MyNode>;
+template class ACE_Unbounded_Set<MyNode>;
+template class ACE_Unbounded_Set_Iterator<MyNode>;
+template class ACE_Unbounded_Set_Const_Iterator<MyNode>;
+template class ACE_Auto_Basic_Ptr<ACE_CString>;
+template class auto_ptr<ACE_CString>;
+
+#elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
+
+#pragma instantiate ACE_Node<MyNode>
+#pragma instantiate ACE_Unbounded_Set<MyNode>
+#pragma instantiate ACE_Unbounded_Set_Iterator<MyNode>;
+#pragma instantiate ACE_Unbounded_Set_Const_Iterator<MyNode>;
+#pragma instantiate ACE_Auto_Basic_Ptr<ACE_CString>;
+#pragma instantiate auto_ptr<ACE_CString>;
+
+#endif /* ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */
 
